# postgis_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  create_reader_role.sql  db.py  docker-compose.yml  gitignore  init.sql  pyproject.toml  server.py  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: conftest.py  test_create_reader_role.py  test_geocode_place.py  test_run_spatial_query.py  test_server.py
tests/fixtures/: test_schema.sql
