[project]
name = "postgis-mcp"
version = "0.1.0"
description = "NL2GeoSQL agent as an MCP server"
requires-python = ">=3.12"
dependencies = [
    "pre-commit==4.6.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pytest==9.1.1",
    "python-dotenv>=1.2.2",
    "ruff==0.15.20",
    "mcp",
    "flake8>=7.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pre-commit>=3.7",
    "pytest-asyncio>=0.24"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
